--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-<a href="work\s01\index.html">work/s01</a>
+<a href="https://roumblestein.github.io/websoft/work/s01/">work/s01</a>
+<a href="work\report\me.html">Check meeee out</a>
