--- a/work/report/me.html
+++ b/work/report/me.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Presentation of my self in the course XXX</title>
+    <title>Presentation of my self in the course DA377B</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="favicon.ico">
 </head>
@@ -28,11 +28,9 @@ Comments are written as HTML style.
 
 <h1>My report page in the course XXX</h1>
 
-<p><img src="img\IMG_0345[1197].png"  width="500" alt="Dog on an image"></p>
+<p><img src="img\Martin_Mollie.jpg"  width="500" alt="Dog on an image"></p>
 
-<p>This is my report-page in the course. This page contains a presentation of myself. Keep this site updated all through the course and hand it in, for grading, in the end of the course.</p>
-
-<p>So, a presentation might be in order. I'll begin.</p>
+<p>This page contains a presentation of myself.</p>
 
 <p>My name is Martin Rubin, born and raised in Kristianstad, Skåne. My parental home was in Torsebro just outside of Kristianstad. I played table tennis and football when i was younger, when i became older computers became more interesting. I studied to carpenter after highschool, which were not something I in the end wanted to do. Started instead studying biomedical analyst on HKR. Unfortunately I had already studied some courses on komvux and were so tired that I instead gave up on the studies and started working. Begun working as a care assistant in home care and later in a nursing home. After 3 years i became extremely tired of both pay and the overall environment in care. So I went back to computers and are now more than motiviated to get a degree so I dont have to work in care again!</p>
 
@@ -45,8 +43,10 @@ Comments are written as HTML style.
 
 <footer>
     <hr>
-    <p>Provide a nice footer to to this page.</p>
-</footer>
+      <p>Posted By: Martin Rubin</p>
+      <p>Contact Info: <a href="mailto:martin.rubin0253@stud.hkr.se">martin.rubin0253@stud.hkr.se</a></p>
+  
+  </footer>
 
 
 
