--- a/work/report/report.html
+++ b/work/report/report.html
@@ -29,12 +29,54 @@
 
 <section>
 <h2>S01</h2>
-<p>Here is the text for this section.</p>
+<p><span style="font-weight:bold">Did you before know about the techniques Git, GitHub, Markdown and/or GitHub Pages?</span></p>
+
+<p>Some of the github things were new, like forked repo which were nice!
+    Otherwise im pretty well versed (to a degree) in git, im often the one that handles and are in charge of the git in out past projects.
+    Github pages were new, also a good way to try webpages!
+    We have also been using gitlab in the software engineering 2 course for that project.</p>
+
+<p><span style="font-weight:bold">Have you ever created websites before?</span></p>
+
+<p>Ive been asked recently to take a look on how to create a website so ive been reading some on firebase etc and started a base project there with working index, but that is as far as my knowledge goes.
+    Downloaded a website editor, Komodo. They are fairly large and are stacked with information (a bit much honestly).</p>
+
+<p><span style="font-weight:bold">Briefly explain your experience and knowledge of web application development.</span></p>
+
+   <p> My past experience in web application is very limited to none, which makes this course even more interesting and motivating!</p>
+
+   <p><span style="font-weight:bold">What is your TIL for this course section?</span></p>
+
+   <p> What i have learned is mostly the existence of github pages, a brief intro on atom and basic html.
+    Getting the forked repo to work is also a new experience and how that can help in certain environments.
+    The git as said, was not that hard to set up, the source repo was new though and can also be valuable at times.</p>
 </section>
 
 <section>
 <h2>S02</h2>
-<p>Here is the text for this section.</p>
+<p><span style="font-weight:bold">Have you any previous experience of HTML, CSS and/or JavaScript?</span></p>
+
+<p>As said in precious section my experience in html, css and js is very limited, we had a brief intro to javascript in jsp when we did the restful api as well as some HTML.
+
+    <p><span style="font-weight:bold">Explain the role of HTML, CSS and JavaScript in web development.</span></p>
+
+   <p>HTML forms the base or skeleton of the website. Provides what elements exist on the page and the overall structure.
+   CSS instead alters said elements and provides ways to change the skeleton. Change fonts, sizes, positions and style of said elements.
+   Javascript is more diverse, here you can define how objects and elements will behave, for example animations. </p>
+
+   <p><span style="font-weight:bold">Give a brief explanation of how the browser, the HTTP protocol and the web server interacts.</span></p>
+
+<p>User enters a URL in the browser, browser contacts a DNS-server. Browser sends a get request to adress provided by DNS-server.
+   To send a get request the browser utilizes the HTTP protocol and the webserver either accepts the requests or denies it. If it accepts (200 OK) the browser gets the page from the webserver.
+
+</p>
+
+   <p><span style="font-weight:bold">What is your TIL for this course section?</span></p>
+
+   <p>Well first of all when creating the footer, i learned how to utilize the mailto function to initiate an email from an emailadress.
+    How to link to resources like images, that jpeg files can be really annoying and doesn't always work with rotate since it is preordained, so had to create my image in PNG instead.
+        </p>
+</p>
 </section>
 
 <section>
@@ -79,8 +121,10 @@
 
 <footer>
     <hr>
-    <p>Provide a nice footer to your report.</p>
-</footer>
+      <p>Posted By: Martin Rubin</p>
+      <p>Contact Info: <a href="mailto:martin.rubin0253@stud.hkr.se">martin.rubin0253@stud.hkr.se</a></p>
+  
+  </footer>
 
 </article>
 
