--- a/work/report/about.html
+++ b/work/report/about.html
@@ -25,9 +25,9 @@
 
 <h1>About</h1>
 
-<p>This website is part of the course websoft.</p>
+<p>This website is part of the course DA377B.</p>
 <p><a href="https://www.hkr.se/en/course/DA377B">Link to Course Page</a></p>
-<p>Provide some insights on the course this far or exaplin a bit more about this website?</p>
+<p>This course is about web development, HTML, CSS, Javascript. </p>
 
 <p><img src="img\markus-spiske-L2cxSuKWbpo-unsplash.jpg"  width="500" alt="Dog on an image"></p>
 
@@ -38,6 +38,7 @@
 </article>
 
 <footer>
+   
   <hr>
     <p>Posted By: Martin Rubin</p>
     <p>Contact Info: <a href="mailto:martin.rubin0253@stud.hkr.se">martin.rubin0253@stud.hkr.se</a></p>
