--- a/work/report/me.html
+++ b/work/report/me.html
@@ -18,7 +18,8 @@ Comments are written as HTML style.
     <nav>
         <a href="me.html">Me</a> |
         <a href="report.html">Report</a> |
-        <a href="about.html">About</a>
+        <a href="about.html">About</a> |
+        <a href="schools.html">schools</a> 
     </nav>
 </header>
 
@@ -51,5 +52,6 @@ Comments are written as HTML style.
 
 
 <script type="text/javascript" src="js/main.js"></script>
+<script src="js/duck.js"></script>
 </body>
 </html>
