--- a/work/report/report.html
+++ b/work/report/report.html
@@ -15,7 +15,8 @@
     <nav>
         <a href="me.html">Me</a> |
         <a href="report.html">Report</a> | 
-        <a href="about.html">About</a>
+        <a href="about.html">About</a> |
+        <a href="schools.html">schools</a> 
     </nav>
 </header>
 
@@ -56,7 +57,7 @@
 <h2>S02</h2>
 <p><span style="font-weight:bold">Have you any previous experience of HTML, CSS and/or JavaScript?</span></p>
 
-<p>As said in precious section my experience in html, css and js is very limited, we had a brief intro to javascript in jsp when we did the restful api as well as some HTML.
+<p>As said in precious section my experience in html, css and js is very limited, we had a brief intro to javascript in jsp when we did the restful api as well as some HTML.</p>
 
     <p><span style="font-weight:bold">Explain the role of HTML, CSS and JavaScript in web development.</span></p>
 
@@ -69,7 +70,7 @@
 <p>User enters a URL in the browser, browser contacts a DNS-server. Browser sends a get request to adress provided by DNS-server.
    To send a get request the browser utilizes the HTTP protocol and the webserver either accepts the requests or denies it. If it accepts (200 OK) the browser gets the page from the webserver.
 
-</p>
+
 
    <p><span style="font-weight:bold">What is your TIL for this course section?</span></p>
 
@@ -81,27 +82,99 @@
 
 <section>
 <h2>S03</h2>
-<p>Here is the text for this section.</p>
+<p><span style="font-weight:bold">Do you have any previous experience of client side JavaScript?</span></p>
+
+   <p>No i have no prior experience of client side javascript, atleast not any that counts.  </p>
+
+    <p><span style="font-weight:bold">Can you compare and relate the JavaScript language to any other language you know?</span></p>
+
+   <p>Well the only language i know so far is java, you can see some similiarites ofcourse. For loops, if statements and similar statements are written the same as in java, variables is written a bit different and is not defined in the same way however.  </p>
+
+   <p><span style="font-weight:bold">Describe how you worked with the coding exercise, what grade do you aim for and how did your code turn out to be?</span></p>
+
+   <p>Well at first i searched for how to create a table from a json object which stack overflow provided some nice solutions, the duck exercise was easy to fix with the help of the example and just had to edit some small parts. Code vise it could probably be neater, as usual. 
+       Because im 4 weeks late into the course i will only aim for the grade 3 at this time since im severly behind. If i find time to update i will try and go for a 5 as i always do.
+   </p>
+
+   <p><span style="font-weight:bold">What is your TIL for this course section?</span></p>
+
+   <p>Getting a bit more oriented with javascript was very nice. Xampp is a very good application to try out certain functions and bypass the Cors error. Getting more oriented with CSS and html as well, read up how to use elements and will probably use it in the future.</p>
 </section>
 
 <section>
 <h2>S04</h2>
-<p>Here is the text for this section.</p>
+<p><span style="font-weight:bold">         </span></p>
+
+   <p></p>
+
+    <p><span style="font-weight:bold">   </span></p>
+
+   <p></p>
+
+   <p><span style="font-weight:bold">    </span></p>
+
+   <p></p>
+
+   <p><span style="font-weight:bold">  </span></p>
+
+   <p> </p>
 </section>
 
 <section>
 <h2>S05</h2>
-<p>Here is the text for this section.</p>
+<p><span style="font-weight:bold">         </span></p>
+
+   <p></p>
+
+    <p><span style="font-weight:bold">   </span></p>
+
+   <p></p>
+
+   <p><span style="font-weight:bold">    </span></p>
+
+   <p></p>
+
+   <p><span style="font-weight:bold">  </span></p>
+
+   <p> </p>
 </section>
 
 <section>
 <h2>S06</h2>
-<p>Here is the text for this section.</p>
+<p><span style="font-weight:bold">         </span></p>
+
+   <p></p>
+
+    <p><span style="font-weight:bold">   </span></p>
+
+   <p></p>
+
+   <p><span style="font-weight:bold">    </span></p>
+
+   <p></p>
+
+   <p><span style="font-weight:bold">  </span></p>
+
+   <p> </p>
 </section>
 
 <section>
 <h2>S07</h2>
-<p>Here is the text for this section.</p>
+<p><span style="font-weight:bold">         </span></p>
+
+   <p></p>
+
+    <p><span style="font-weight:bold">   </span></p>
+
+   <p></p>
+
+   <p><span style="font-weight:bold">    </span></p>
+
+   <p></p>
+
+   <p><span style="font-weight:bold">  </span></p>
+
+   <p> </p>
 </section>
 
 <section>
@@ -131,5 +204,6 @@
 
 
 <script type="text/javascript" src="js/main.js"></script>
+<script src="js/duck.js"></script>
 </body>
 </html>
