--- a/work/report/about.html
+++ b/work/report/about.html
@@ -15,7 +15,8 @@
     <nav>
         <a href="me.html">Me</a> |
         <a href="report.html">Report</a> |
-        <a href="about.html">About</a>
+        <a href="about.html">About</a> |
+        <a href="schools.html">schools</a> 
     </nav>
 </header>
 
@@ -46,5 +47,6 @@
 </footer>
 
 <script type="text/javascript" src="js/main.js"></script>
+<script src="js/duck.js"></script>
 </body>
 </html>
